--- a/styles.css
+++ b/styles.css
@@ -11,38 +11,43 @@
   --border-radius: 10px;
 }
 
-body {
-  background-color: var(--cream);
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: var(--font-size);
-  font-family: 'Montserrat', sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 * {
   margin-block-start: 0em;
   margin-block-end: 0em;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.card {
+body {
+  background-color: var(--cream);
+  font-size: var(--font-size);
+  font-family: 'Montserrat', sans-serif;
+  
+  height: 100vh;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.card__container {
   background-color: var(--white);
   border-radius: var(--border-radius);
   width: 350px;
   height: 620px;
 }
 
-.product__image {
+.card__picture {
   width: 100%;
-  object-fit: cover;
+  display: block;
 }
 
-.product__image img {
+img {
   display: block;
   width: 100%;
   height: 100%;
@@ -50,30 +55,23 @@ body {
   border-top-right-radius: var(--border-radius);
 }
 
-.product__info__wrapper {
-  width: 100%;
-  height: 53%;
-  display: flex;
-}
-
-.product__info {
+.card__content {
   display: flex;
   flex-direction: column;
-  flex: 1;
   justify-content: space-between;
   padding: 24px;
   width: 100%;
-  height: 100%;
+  height: 60%;
   color: var(--dark-gray-blue);
 }
 
-.product__category {
+.card__category {
   text-transform: uppercase;
   letter-spacing: 0.5ch;
   font-size: calc(0.9 * var(--font-size));
 }
 
-.product__title {
+.card__title {
   color: var(--dark-blue);
   font-family: 'Fraunces', serif;
   font-size: calc(2.25 * var(--font-size));
@@ -82,14 +80,14 @@ body {
   margin-block-end: 0.1em;
 }
 
-.product__description {
+.card__description {
   width: 100%;
   line-height: calc(1.75 * var(--font-size));
   margin-block-start: 0.25em;
   margin-block-end: 0.25em;
 }
 
-.product__price {
+.card__price {
   display: flex;
   align-items: center;
   margin: 0.2rem 0;
@@ -129,33 +127,44 @@ body {
 }
 
 @media (min-width: 600px) {
-  .card {
+  .card__container {
     display: flex;
     width: 600px;
     height: 450px;
   }
 
-  .product__image img {
+  .card__picture {
+    width: 50%;
+  }
+
+  img {
     border-top-right-radius: 0;
     border-bottom-left-radius: var(--border-radius);
   }
 
-  .product__info__wrapper {
+  .card__content {
+    padding: 28px;
+    width: 50%;
     height: 100%;
   }
 
-  .product__info {
-    padding: 32px;
-    height: auto;
-  }
-
-  .product__title {
+  .card__title {
     font-size: calc(2.5 * var(--font-size));
     line-height: calc(2.5 * var(--font-size));
   }
 }
 
-.attribution {
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+footer {
   position: absolute;
   bottom: 5px;
+  width: 100%;
 }
