--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@
   --dark-blue: hsl(212, 21%, 14%);
   --dark-gray-blue: hsl(228, 12%, 48%);
   --white: hsl(0, 0%, 100%);
-  --font-size: 14px;
+  --font-size: 0.875rem;
   --mobile: 375px;
   --desktop: 1440px;
-  --border-radius: 10px;
+  --border-radius: 0.675rem;
 }
 
 * {
@@ -23,135 +23,21 @@ body {
   background-color: var(--cream);
   font-size: var(--font-size);
   font-family: 'Montserrat', sans-serif;
-  
-  height: 100vh;
-}
-
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.card__container {
-  background-color: var(--white);
-  border-radius: var(--border-radius);
-  width: 350px;
-  height: 620px;
-}
-
-.card__picture {
-  width: 100%;
-  display: block;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-top-left-radius: var(--border-radius);
-  border-top-right-radius: var(--border-radius);
-}
-
-.card__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 24px;
-  width: 100%;
-  height: 60%;
   color: var(--dark-gray-blue);
+  height: 100vh;
+  display: grid;
+  place-content: center;
+  margin: 1rem;
+  position: relative;
 }
 
-.card__category {
-  text-transform: uppercase;
-  letter-spacing: 0.5ch;
-  font-size: calc(0.9 * var(--font-size));
-}
-
-.card__title {
-  color: var(--dark-blue);
-  font-family: 'Fraunces', serif;
-  font-size: calc(2.25 * var(--font-size));
-  line-height: calc(2.5 * var(--font-size));
-  margin-block-start: 0.1em;
-  margin-block-end: 0.1em;
-}
-
-.card__description {
-  width: 100%;
-  line-height: calc(1.75 * var(--font-size));
-  margin-block-start: 0.25em;
-  margin-block-end: 0.25em;
-}
-
-.card__price {
-  display: flex;
-  align-items: center;
-  margin: 0.2rem 0;
-}
-
-.current-price {
-  color: var(--dark-cyan);
-  font-family: 'Fraunces', serif;
-  font-size: calc(2.25 * var(--font-size));
-  margin-right: calc(1.5 * var(--font-size));
-}
-
-.original-price {
-  text-decoration: line-through;
-}
-
-.add-to-cart {
-  background-color: var(--dark-cyan);
-  color: var(--white);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  padding: calc(1.2 * var(--font-size)) calc(2 * var(--font-size));
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.add-to-cart svg {
-  margin-right: 10px;
-}
-
-.add-to-cart:active {
-  background-color: var(--active-cyan);
-}
-
-@media (min-width: 600px) {
-  .card__container {
-    display: flex;
-    width: 600px;
-    height: 450px;
-  }
-
-  .card__picture {
-    width: 50%;
-  }
-
-  img {
-    border-top-right-radius: 0;
-    border-bottom-left-radius: var(--border-radius);
-  }
-
-  .card__content {
-    padding: 28px;
-    width: 50%;
-    height: 100%;
-  }
-
-  .card__title {
-    font-size: calc(2.5 * var(--font-size));
-    line-height: calc(2.5 * var(--font-size));
-  }
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
 }
 
 .sr-only {
@@ -163,8 +49,86 @@ img {
   overflow: hidden;
 }
 
+.product {
+  --content-padding: 1.5rem;
+  --content-spacing: 1rem;
+
+  display: grid;
+  background-color: var(--white);
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  max-width: 380px;
+}
+
+@media (min-width: 600px) {
+  .product {
+    --content-padding: 2rem;
+    max-width: 600px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.product__content {
+  display: grid;
+  gap: var(--content-spacing);
+  padding: var(--content-padding);
+}
+
+.product__category {
+  font-size: 0.9em;
+  letter-spacing: 0.5ch;
+  text-transform: uppercase;
+}
+
+.product__title {
+  font-size: 2.25em;
+  color: var(--dark-blue);
+  font-family: 'Fraunces', serif;
+}
+
+.product__description {
+  line-height: 1.75em;
+}
+
+.product__price {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.current-price {
+  color: var(--dark-cyan);
+  font-family: 'Fraunces', serif;
+  font-size: 2.25em;
+}
+
+.original-price {
+  text-decoration: line-through;
+}
+
+.button {
+  background-color: var(--dark-cyan);
+  color: var(--white);
+  font: inherit;
+  font-weight: 700;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 1.2em 2em;
+  width: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+}
+
+.button:active {
+  background-color: var(--active-cyan);
+}
+
 footer {
+  margin-inline: auto;
   position: absolute;
-  bottom: 5px;
+  bottom: 2px;
   width: 100%;
 }
